2008-08-19	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sh7032/timer/timer.c, sh7045/timer/timer.c, sh7750/timer/timer.c:
	 Add missing prototypes.

2008-04-23	Joel Sherrill <joel.sherrill@OARcorp.com>

	* sh7750/sci/console.c: Remove all references to
	console_reserve_resources and termios_reserve_resources.

2007-11-26	Joel Sherrill <joel.sherrill@oarcorp.com>

	* sh7032/clock/ckinit.c, sh7032/delay/delay.c, sh7032/timer/timer.c,
	sh7045/clock/ckinit.c, sh7045/timer/timer.c, sh7750/clock/ckinit.c,
	sh7750/timer/timer.c: Eliminate the clicks_per_microsecond field in
	the SuperH CPU Table and define another mechanism for drivers to
	obtain this information.

2007-09-12	Joel Sherrill <joel.sherrill@OARcorp.com>

	PR 1257/bsps
	* sh7032/score/cpu_asm.c, sh7032/timer/timer.c, sh7045/score/cpu_asm.c,
	sh7045/timer/timer.c, sh7750/score/cpu_asm.c, sh7750/timer/timer.c:
	Code outside of cpukit should use the public API for
	rtems_interrupt_disable/rtems_interrupt_enable. By bypassing the
	public API and directly accessing _CPU_ISR_Disable and
	_CPU_ISR_Enable, they were bypassing the compiler memory barrier
	directive which could lead to problems. This patch also changes the
	type of the variable passed into these routines and addresses minor
	style issues.

2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sh7032/score/cpu_asm.c, sh7045/score/cpu_asm.c,
	sh7750/score/cpu_asm.c:
	Use Context_Control_fp* instead of void* for fp_contexts.

2006-12-02	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: New BUG-REPORT address.

2006-10-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Require autoconf-2.60. Require automake-1.10.

2006-09-13	Ralf Corsépius <ralf.corsepius@rtems.org>

	* sh7750/include/rtems/score/sh7750_regs.h: Fix spelling of IPRC
	(Probably a cyrillic 'C' instead of an ASCI 'C').

2006-05-16	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Use RTEMS_AMPOLISH3.

2005-11-04	Ralf Corsepius <ralf.corsepius@rtems.org>
